--- a/DockerFile
+++ b/DockerFile
@@ -1,7 +1,9 @@
-FROM openjdk:latest
+FROM maven:3.6.3-jdk-11
+WORKDIR /usr/src/java-code
+COPY . /usr/src/java-code/
+RUN mvn package
 
-ADD target/SevenSendersAPI-0.0.1-SNAPSHOT.jar app.jar
+WORKDIR /usr/src/java-app
+RUN cp /usr/src/java-code/target/*.jar ./app.jar
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
-
-EXPOSE 8080 
+CMD ["java", "-jar", "app.jar"]
